--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -6,17 +6,24 @@
     <title>Dreamsleeve</title>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-realm.css">
+    <link rel="stylesheet" href="style-history.css">
     <link href='https://fonts.googleapis.com/css?family=Staatliches' rel='stylesheet'>
 </head>
 <body onload="testRun()">
+
     <ion-app>
         <ion-nav animated="true" root="nav-home" swipeGesture="true"></ion-nav>
+    
+        
     </ion-app>
+
     <script src="faqData.js"></script>
     <script src="realmsData.js"></script>
+    <script src="history.js"></script>
     <script src="htmlCodes.js"></script>
     <script src="index.js"></script>
     <script src="realmCycle.js"></script>
